--- a/package.json
+++ b/package.json
@@ -14,11 +14,13 @@
     "eslint": "8.42.0",
     "eslint-config-next": "13.4.4",
     "fs": "^0.0.1-security",
+    "grommet": "^2.35.0-alpha.1",
     "lokijs": "^1.5.12",
-    "next": "13.4.4",
+    "next": "^13.5.6",
     "pino-pretty": "^10.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "styled-components": "^6.1.0",
     "tls": "^0.0.1",
     "viem": "^0.3.50",
     "wagmi": "^1.0.9"
